# ai-orquestrator-agent

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  package.json
backend/: .env.example  auth.db-shm  auth.db-wal  pyproject.toml  requirements.txt
backend/migrations/: 002_add_model_config_to_cards.sql
backend/src/: agent_chat.py  database.py  execution.py  git_workspace.py  main.py
backend/src/config/: experts.py  model_ids.py  pricing.py  settings.py
backend/src/models/: __init__.py  card.py  chat.py  decision.py  execution.py  metrics.py  project_registry.py  workflow.py
backend/tests/: test_agent_chat_cwd.py  test_card_project_scope.py  test_card_repository.py  test_cards_project_scope_repo.py  test_chat_models.py  test_chat_repository.py  test_chat_routes_scoped.py  test_chat_service_scoped.py  test_check_merge_route.py  test_column_id_move.py  test_cost_stats.py  test_decisions.py  test_devkit_core_contract.py  test_expert_triage_project.py  test_findings.py  test_git_workspace_commit.py  test_metrics_fk_migration.py  test_model_alias_migration.py  test_model_ids.py  test_move_by_config.py  test_next_active_column.py  test_pause_options.py  test_pipeline_model_wiring.py  test_pipeline_service.py  test_pr_service.py  test_project_registry.py  test_project_repository.py  test_projects_registry_routes.py  test_runner_service.py  test_single_engine.py  test_stage_runner_load.py  test_stage_runner_resilience.py  test_startup_recovery.py  test_validate_ci.py  test_workflow_rules.py  test_workflow_seed.py  test_workflows_routes.py
devkit/: README.md  (+1 more)
(+177 files in other folders)
